# Clutter

./: .eslintrc.js  .gitignore  ARCHITECTURE.md  CARET_BUG_FIX.md  CLEAR_CLUTTER_FEATURE.md  CLICK_EMPTY_BLOCK_FIX.md  COLLAPSE_BOUNDARY_FIX_COMPLETE.md  ENTER_KEY_TRACING.md  ENTER_SELECTION_DEBUG.md  HARDENING-COMPLETE.md  HISTORY_IMPLEMENTATION.md  LIFECYCLE_BUG_FIX.md  OPTIMIZATIONS.md  PERSISTENCE-FIXES-COMPLETE.md  PHASE_4_COMPLETE.md  PROJECT_STRUCTURE.md  PUBLIC_API.md  README.md  REFACTOR_PLAN.md  SCHEMA_CREATION_LAW.md  SELECTION_BUG_FIX.md  SELECTION_ESCALATION_LAW.md  SELECTION_FIX_APPLIED.md  SIDEBAR_REFACTOR_SUMMARY.md  STYLE_CONSISTENCY_FIXES.md  TAGS_MULTISELECT_COMPLETE.md  TASK_PAGES_IMPLEMENTATION.md  TASK_TAB_IMPLEMENTATION.md  TASK_VARIANT_COMPLETE.md  TASK_VARIANT_IMPLEMENTATION.md  TESTING-GUIDE.md  TEST_GUIDE.md  UI_STATE_IMPLEMENTATION_COMPLETE.md  UI_STATE_MIGRATION_GUIDE.md  UNDO_GROUPING_LAW.md  WEBVIEW_CACHE_ISSUE.md  package-lock.json  package.json  tsconfig.json  turbo.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: .gitkeep  icon.icns
apps/desktop/src-tauri/migrations/: 001_add_history.sql
apps/desktop/src-tauri/src/: database.rs  main.rs
docs/: COMPONENT_AUDIT.md  COMPONENT_RENAME_COMPLETE.md  COMPONENT_REORGANIZATION_FINAL.md  EDITOR_ARCHITECTURE_INVARIANTS.md  EDITOR_BLOCK_CONTRACT.md  FLAT_INDENT_MODEL.md  FLAT_MODEL_MIGRATION.md  INDENT_TREE_INVARIANT.md  REORGANIZATION_COMPLETE.md  UNUSED_CODE_REMOVED.md
scripts/: check-editor-invariants.sh  reset-dev.sh  update-imports.js
(+41 files in other folders)
