[package]
name = "clutter-notes-desktop"
version = "2.0.0"
description = "Clutter Notes Desktop Application"
authors = ["Clutter Notes Team"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "dialog-confirm", "macos-private-api", "fs-read-file", "window-maximize", "window-unminimize", "window-start-dragging", "window-minimize", "window-hide", "window-close", "fs-write-file", "dialog-save", "fs-rename-file", "fs-remove-file", "fs-remove-dir", "fs-read-dir", "fs-create-dir", "fs-exists", "dialog-open", "window-unmaximize", "window-show", "shell-open", "path-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.29", features = ["bundled"] }
chrono = "0.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

